force-app/main/default/objects/Mirror_Asset__c/Mirror_Asset__c.object-meta.xml
<CustomObject>
    <label>Mirror_Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mirror Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>