force-app/main/default/objects/Mirror_Asset__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mirror Assets</relationshipLabel>
    <relationshipName>Mirror_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>