force-app/main/default/objects/Mirror_Asset__c/fields/Original_Asset__c.field-meta.xml
<CustomField>
    <fullName>Original_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Mirror Assets</relationshipLabel>
    <relationshipName>Mirror_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>